--- a/Resources.qrc
+++ b/Resources.qrc
@@ -8,5 +8,16 @@
         <file>assets/icon/close.png</file>
         <file>assets/icon/play.png</file>
         <file>assets/icon/start.png</file>
+        <file>assets/icon/pause.png</file>
+        <file>assets/icon/up.png</file>
+        <file>assets/icon/next.png</file>
+        <file>assets/icon/bulletSetting.png</file>
+        <file>assets/icon/bulletOn.png</file>
+        <file>assets/icon/bulletOff.png</file>
+        <file>assets/icon/volumeMute.png</file>
+        <file>assets/icon/volume.png</file>
+        <file>assets/icon/videoSetting.png</file>
+        <file>assets/icon/videoMin.png</file>
+        <file>assets/icon/videoMax.png</file>
     </qresource>
 </RCC>
