--- a/Resources.qrc
+++ b/Resources.qrc
@@ -21,5 +21,9 @@
         <file>assets/icon/videoMax.png</file>
         <file>assets/icon/captionOn.png</file>
         <file>assets/icon/captionOff.png</file>
+        <file>assets/icon/return.png</file>
+        <file>assets/icon/collectOn.png</file>
+        <file>assets/icon/collectOff.png</file>
+        <file>assets/icon/fileList.png</file>
     </qresource>
 </RCC>
