--- a/Resources.qrc
+++ b/Resources.qrc
@@ -25,5 +25,6 @@
         <file>assets/icon/collectOn.png</file>
         <file>assets/icon/collectOff.png</file>
         <file>assets/icon/fileList.png</file>
+        <file>qml/components/PlayFileList.qml</file>
     </qresource>
 </RCC>
