--- a/Resources.qrc
+++ b/Resources.qrc
@@ -30,5 +30,6 @@
         <file>assets/picture/img1.jpg</file>
         <file>assets/icon/exitMax.png</file>
         <file>assets/icon/about.png</file>
+        <file>assets/icon/systemSetting.png</file>
     </qresource>
 </RCC>
