--- a/Resources.qrc
+++ b/Resources.qrc
@@ -30,6 +30,7 @@
         <file>assets/picture/img1.jpg</file>
         <file>assets/icon/exitMax.png</file>
         <file>assets/icon/about.png</file>
-        <file>assets/icon/systemSetting.png</file>
+        <file>assets/picture/no_video.png</file>
+        <file>assets/icon/SystemSetting.png</file>
     </qresource>
 </RCC>
