--- a/Resources.qrc
+++ b/Resources.qrc
@@ -31,6 +31,9 @@
         <file>assets/icon/exitMax.png</file>
         <file>assets/icon/about.png</file>
         <file>assets/picture/no_video.png</file>
-        <file>assets/icon/SystemSetting.png</file>
+        <file>assets/icon/systemSetting.png</file>
+        <file>assets/icon/import.png</file>
+        <file>assets/background/spot.png</file>
+        <file>qml/pages/SettingPage.qml</file>
     </qresource>
 </RCC>
